# spacy-ngram

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/spacy_ngram/: __init__.py  ngram_component.py
test/: conftest.py  test_edges.py  test_ngrams.py
