[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'spacy-ngram'
version = '0.0.1'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' }
]
license = { file = 'LICENSE'}
homepage = 'https://github.com/kpwhri/spacy-ngram'
description = 'SpaCy pipeline component for adding document or sentence-level ngrams.'
requires = ['spacy']
requires-python = '>=3.10'
readme = 'README.md'
keywords = ['nlp', 'information extraction']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
dev = ['pytest']


[tool.flit.module]
name = 'spacy_ngram'
