[build-system]
requires = ['flit_core >=3.2']
build-backend = 'flit_core.buildapi'

[project]
name = 'spacy-ngram'
version = '0.0.2'
authors = [
    { name = 'dcronkite', email = 'dcronkite+pypi@gmail.com' }
]
license = { file = 'LICENSE'}
description = 'SpaCy pipeline component for adding document or sentence-level ngrams.'
dependencies = ['spacy']
requires-python = '>=3.10'
readme = 'README.md'
keywords = ['nlp', 'ngrams']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Text Processing :: Linguistic',
    'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
dev = ['pytest']

[project.urls]
Home = 'https://github.com/kpwhri/spacy-ngram'

[tool.flit.module]
name = 'spacy_ngram'
